Fix menu bar spacing

--- a/css/winclassic.css
+++ b/css/winclassic.css
@@ -59,6 +59,7 @@
   /* float: left; */
   display: inline-block;
   padding: 1px 4px;
+  margin: 1px;
 }
 
 .titlebar {
